fix: set correct whitespace breaking behavior in installation steps
Main Bitwarden CSS set `whitespace: nowrap` for all application buttons

In React buttons we don't want this behavior as it may break display
for those components (due to historic css)

For example this breaks the display of installation steps when a step
label is too long (i.e. using French language)

--- a/src/scss/cozy.scss
+++ b/src/scss/cozy.scss
@@ -47,6 +47,10 @@ app-button-extension {
     svg[class*="MuiStepIcon-active"] {
         color: var(--primaryColor);
     }
+
+    button {
+        white-space: inherit;
+    }
 }
 
 app-vault-icon {
